<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.myapplication.ui.MainActivityViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/green_00"
                    app:contentInsetEnd="0dp"
                    app:contentInsetStart="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="10dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_feed_media_news_rss_social_icon"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:text="@string/donga"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:textStyle="bold"
                            app:layout_constrainedWidth="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="기사 제목" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    app:singleLine="true"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_total"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_total_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_politic"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_politic_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_national"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_national_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_economy"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_economy_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_international"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_international_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_editorial"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_editorial_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_science"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_science_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_culture"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_culture_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />


                    <com.google.android.material.chip.Chip
                        android:id="@+id/donga_sport"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donga_sports_news"
                        android:textColor="@drawable/selector_textcolor"
                        app:chipBackgroundColor="@drawable/selector_chip_bg"
                        app:chipStrokeColor="@color/gray_e1"
                        app:chipStrokeWidth="1dp" />


                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>


            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swipe_refresh_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_fileName="8707_loading.json"
                app:lottie_loop="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>